; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_time.c_ngx_http_lua_ngx_today.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_time.c_ngx_http_lua_ngx_today.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32, i32 }

@ngx_cached_time = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"%04d-%02d-%02d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ngx_http_lua_ngx_today to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_http_lua_ngx_today(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_4__, align 4
  %5 = alloca [10 x i32], align 16
  store i32* %0, i32** %2, align 8
  %6 = call i64 (...) @ngx_time()
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @ngx_cached_time, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = mul nsw i32 %10, 60
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %7, %12
  %14 = call i32 @ngx_gmtime(i64 %13, %struct.TYPE_4__* %4)
  %15 = getelementptr inbounds [10 x i32], [10 x i32]* %5, i64 0, i64 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ngx_sprintf(i32* %15, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %19, i32 %21)
  %23 = load i32*, i32** %2, align 8
  %24 = getelementptr inbounds [10 x i32], [10 x i32]* %5, i64 0, i64 0
  %25 = bitcast i32* %24 to i8*
  %26 = call i32 @lua_pushlstring(i32* %23, i8* %25, i32 40)
  ret i32 1
}

declare dso_local i64 @ngx_time(...) #1

declare dso_local i32 @ngx_gmtime(i64, %struct.TYPE_4__*) #1

declare dso_local i32 @ngx_sprintf(i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
